// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ui/shared/form/FormField Avec Erreur 1`] = `
<div
  className="fr-input-group flex-grow fr-input-group--error"
>
  <label
    className="fr-label mb-2"
  >
    <div
      className="font-medium"
    >
      Label
    </div>
    <span
      className="fr-hint-text !mt-1 !mb-0"
    >
      Indiquez votre adresse email
    </span>
  </label>
  <input
    className="fr-input"
    placeholder="contact@tet.fr"
    type="text"
    value="contacttet.fr"
  />
  <p
    className="fr-error-text"
  >
    L'adresse email doit contenir un '@'
  </p>
</div>
`;

exports[`Storyshots ui/shared/form/FormField Avec Indice 1`] = `
<div
  className="fr-input-group flex-grow"
>
  <label
    className="fr-label mb-2"
  >
    <div
      className="font-medium"
    >
      Label
    </div>
    <span
      className="fr-hint-text !mt-1 !mb-0"
    >
      Indiquez votre adresse email
    </span>
  </label>
  <input
    className="fr-input"
    placeholder="contact@tet.fr"
    type="text"
  />
</div>
`;

exports[`Storyshots ui/shared/form/FormField Default 1`] = `
<div
  className="fr-input-group flex-grow"
>
  <label
    className="fr-label mb-2"
  >
    <div
      className="font-medium"
    >
      Identifiant
    </div>
  </label>
  <input
    className="fr-input"
    placeholder="contact@tet.fr"
    type="text"
  />
</div>
`;

exports[`Storyshots ui/shared/form/FormField Desactive 1`] = `
<div
  className="fr-input-group flex-grow fr-input-group--disabled"
>
  <label
    className="fr-label mb-2"
  >
    <div
      className="font-medium"
    >
      Identifiant
    </div>
  </label>
  <input
    className="fr-input"
    disabled={true}
    placeholder="contact@tet.fr"
    type="text"
  />
</div>
`;
